2003-12-04  bulia byak <bulia@dr.com>

	* src/toolbox.c: added convert to curves button, cosmetic changes in aux toolbar

	* src/text-context.c: made text editing via xml editor undoable

	* src/nodepath.c: new functions to duplicate node, fixes to node_break and selection
	functions, new (presently unused) functions for saving/restoring node selection

	* src/node-context.c: shift-d to duplicate node, all keys now work regardless of capslock

	* src/document-undo.c: temp fix: undo emits selection_changed signal for node editor
	to update display

	* src/selection.c: new function without arguments to emit change_selection signal

	* src/selection.h: new function without arguments to emit change_selection signal

	* src/nodepath.h: new functions to duplicate node, new (presently unused) functions
	for saving/restoring node selection

2003-12-04  MenTaLguY <mental@rydia.net>

	* src/desktop.c: rearranged toolbars so aux toolbar is topmost
	* src/toolbox.c: made toolbars detachable

2003-12-02  bulia byak <bulia@dr.com>

	* src/file.c: made open and save dialogs modal and transient

2003-12-02  bulia byak <bulia@dr.com>

	* src/interface.c: removed tool attributes command
	* src/preferences-skeleton.h: added branch for export dialog
	* src/file.c: made import dialog transient
	* src/verbs.c: changed some dialog names and tooltips
	* src/shortcuts.c: changed shortcuts for transform and text dialogs
	* src/dialogs/display-settings.c: fixed dialog title
	* src/dialogs/export.c: made unsinkable, remembering size and position, added label
	for filename

2003-11-30 MenTaLguY <mental@rydia.net>

	* src/xml/repr-io.c, src/attributes.c, src/attributes.h,
	  src/sp-object.h, src/sp-object.c: merged basis for Oka's
	  xml:space support

	* src/toolbox.c: made tool buttons larger, aux buttons smaller

	* src/document-undo.c: fixed bug with undo/redo past the
	  beginning/end of the undo history

2003-11-29  bulia byak <bulia@dr.com>
