@@ -1,3 +1,9 @@
+2003-12-05 MenTaLguY <mental@rydia.net>
+
+	* src/svg/svg-length.c, src/helper/units.c: removed #ifdef WIN32 insanity
+
+	* src/extension.c: removed _some_ #ifdef WIN32 insanity (we still need a portable popen())
+
 2003-12-04  bulia byak <bulia@dr.com>
 
 	* src/toolbox.c: added convert to curves button, cosmetic changes in aux toolbar
